force-app/main/default/objects/ZDocData__c/ZDocData__c.object-meta.xml
<CustomObject>
    <description>Contient l&#39;ensemble des données nécessaires à la génération des S-docs</description>
    <label>Z Doc Data</label>
    <nameField>
        <label>Z Doc Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z Doc Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>