force-app/main/default/objects/ZDocData__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Z Doc Data (Account)</relationshipLabel>
    <relationshipName>Z_Doc_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>