force-app/main/default/objects/ZDocData__c/fields/Adresse_livraison_CP__c.field-meta.xml
<CustomField>
    <fullName>Adresse_livraison_CP__c</fullName>
    <formula>IF(ModeLivraison__c=&#39;Adresse Porteur&#39;,Account__r.CodePostal__c,IF(ModeLivraison__c =&#39;Adresse Payeur&#39;,Payeur__r.CodePostal__c,&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse livraison CP</label>
    <type>Text</type>
</CustomField>