force-app/main/default/objects/ZDocData__c/fields/Adresse_livraison_Pays__c.field-meta.xml
<CustomField>
    <fullName>Adresse_livraison_Pays__c</fullName>
    <formula>IF(ModeLivraison__c=&#39;Adresse Porteur&#39;,TEXT(Account__r.Pays__c),IF(ModeLivraison__c =&#39;Adresse Payeur&#39;, TEXT(Payeur__r.Pays__c),&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse livraison Pays</label>
    <type>Text</type>
</CustomField>