force-app/main/default/objects/ZDocData__c/fields/AutoRenew__c.field-meta.xml
<CustomField>
    <fullName>AutoRenew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoRenew?</label>
    <type>Checkbox</type>
</CustomField>