force-app/main/default/objects/ZDocData__c/fields/BankTransferAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankTransferAccountNumber__c</fullName>
    <description>Payment method</description>
    <label>Bank Transfer Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>