force-app/main/default/objects/ZDocData__c/fields/Cinema__c.field-meta.xml
<CustomField>
    <fullName>Cinema__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>nom du cinema, complexe:</description>
    <label>Cinéma</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Z Doc Data</relationshipLabel>
    <relationshipName>Z_Doc_Data</relationshipName>
    <type>Lookup</type>
</CustomField>