force-app/main/default/objects/ZDocData__c/fields/CMRR__c.field-meta.xml
<CustomField>
    <fullName>CMRR__c</fullName>
    <label>CMRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>