force-app/main/default/objects/ZDocData__c/fields/CodeOffrePrincipale__c.field-meta.xml
<CustomField>
    <fullName>CodeOffrePrincipale__c</fullName>
    <label>Code Offre Principale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UI1CDD</fullName>
            </value>
            <value>
                <fullName>UI2CDD</fullName>
            </value>
            <value>
                <fullName>UI3CDD</fullName>
            </value>
            <value>
                <fullName>UUCDD</fullName>
            </value>
            <value>
                <fullName>UI1CDI</fullName>
            </value>
            <value>
                <fullName>UI2CDI</fullName>
            </value>
            <value>
                <fullName>UI3CDI</fullName>
            </value>
            <value>
                <fullName>UUCDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>