force-app/main/default/objects/ZDocData__c/fields/CodePromo__c.field-meta.xml
<CustomField>
    <fullName>CodePromo__c</fullName>
    <label>Code Promo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>