force-app/main/default/objects/ZDocData__c/fields/CurrentTerm__c.field-meta.xml
<CustomField>
    <fullName>CurrentTerm__c</fullName>
    <label>Current Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>