force-app/main/default/objects/ZDocData__c/fields/CurrentTermPeriodType__c.field-meta.xml
<CustomField>
    <fullName>CurrentTermPeriodType__c</fullName>
    <label>Current Term Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>