force-app/main/default/objects/ZDocData__c/fields/DateFinContrat__c.field-meta.xml
<CustomField>
    <fullName>DateFinContrat__c</fullName>
    <label>Date Fin Contrat</label>
    <type>Date</type>
</CustomField>