force-app/main/default/objects/ZDocData__c/fields/Lieu__c.field-meta.xml
<CustomField>
    <fullName>Lieu__c</fullName>
    <description>code complexe</description>
    <label>Lieu</label>
    <length>15</length>
    <type>Text</type>
</CustomField>