force-app/main/default/objects/ZDocData__c/fields/MandateID__c.field-meta.xml
<CustomField>
    <fullName>MandateID__c</fullName>
    <description>payment method</description>
    <label>MandateID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>