force-app/main/default/objects/ZDocData__c/fields/Methodedepaiement__c.field-meta.xml
<CustomField>
    <fullName>Methodedepaiement__c</fullName>
    <label>Methode de paiement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>