force-app/main/default/objects/ZDocData__c/fields/ModeLivraison__c.field-meta.xml
<CustomField>
    <fullName>ModeLivraison__c</fullName>
    <label>ModeLivraison</label>
    <length>200</length>
    <type>Text</type>
</CustomField>