force-app/main/default/objects/ZDocData__c/fields/Offre1__c.field-meta.xml
<CustomField>
    <fullName>Offre1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offre1</label>
    <referenceTo>Offre__c</referenceTo>
    <relationshipLabel>Z Doc Data</relationshipLabel>
    <relationshipName>Z_Doc_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>