force-app/main/default/objects/ZDocData__c/fields/Offre2__c.field-meta.xml
<CustomField>
    <fullName>Offre2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offre2</label>
    <referenceTo>Offre__c</referenceTo>
    <relationshipLabel>Z Doc Data (Offre2)</relationshipLabel>
    <relationshipName>Z_Doc_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>