force-app/main/default/objects/ZDocData__c/fields/Offres_commerciales_FR__c.field-meta.xml
<CustomField>
    <fullName>Offres_commerciales_FR__c</fullName>
    <formula>IF(ISBLANK(Offre2__r.HermesIntituleOffre__c),IF(ISBLANK(Offre1__r.HermesIntituleOffre__c),&#39;Aucune&#39;,Offre1__r.HermesIntituleOffre__c),Offre1__r.HermesIntituleOffre__c + &#39;-&#39; + Offre2__r.HermesIntituleOffre__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offres commerciales FR</label>
    <type>Text</type>
</CustomField>