force-app/main/default/objects/ZDocData__c/fields/Offres_commerciales_NL__c.field-meta.xml
<CustomField>
    <fullName>Offres_commerciales_NL__c</fullName>
    <formula>IF (ISBLANK(Offre2__r.HermesIntituleOffreNL__c),Offre1__r.HermesIntituleOffreNL__c,Offre1__r.HermesIntituleOffreNL__c + &#39;-&#39; + Offre2__r.HermesIntituleOffreNL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offres commerciales NL</label>
    <type>Text</type>
</CustomField>