force-app/main/default/objects/ZDocData__c/fields/Payeur__c.field-meta.xml
<CustomField>
    <fullName>Payeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payeur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Z Doc Data</relationshipLabel>
    <relationshipName>Z_Doc_Data</relationshipName>
    <type>Lookup</type>
</CustomField>