force-app/main/default/objects/ZDocData__c/fields/PayeurCRMID__c.field-meta.xml
<CustomField>
    <fullName>PayeurCRMID__c</fullName>
    <label>PayeurCRMID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>