force-app/main/default/objects/ZDocData__c/fields/Subscriptionname__c.field-meta.xml
<CustomField>
    <fullName>Subscriptionname__c</fullName>
    <label>Subscription name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>