force-app/main/default/objects/ZDocData__c/fields/tech_adressetitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_adressetitulaireducompte__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39;, Account__r.AdressePostale__c , IF(Payeur__c &lt;&gt; &#39;&#39;,Payeur__r.AdressePostale__c , &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_adressetitulaireducompte</label>
    <type>Text</type>
</CustomField>