force-app/main/default/objects/ZDocData__c/fields/tech_cdd_amount__c.field-meta.xml
<CustomField>
    <fullName>tech_cdd_amount__c</fullName>
    <formula>IF(ISPICKVAL(CodeOffrePrincipale__c,&#39;UI1CDD&#39;), &#39;262,80€&#39;, IF(ISPICKVAL(CodeOffrePrincipale__c,&#39;UI2CDD&#39;), &#39;441,60€&#39;, IF(ISPICKVAL(CodeOffrePrincipale__c,&#39;UI3CDD&#39;), &#39;214,80€&#39;, IF(ISPICKVAL(CodeOffrePrincipale__c,&#39;UUCDD&#39;), &#39;UGC Unlimited&#39;, &#39;226,80€&#39;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_cdd_amount</label>
    <type>Text</type>
</CustomField>