force-app/main/default/objects/ZDocData__c/fields/tech_formule__c.field-meta.xml
<CustomField>
    <fullName>tech_formule__c</fullName>
    <formula>IF(ISPICKVAL(CodeOffrePrincipale__c, &#39;UI1CDD&#39;),&#39;UGC Illimité 1&#39;, IF(ISPICKVAL(CodeOffrePrincipale__c, &#39;UI1CDI&#39;),&#39;UGC Illimité 1&#39;,IF(ISPICKVAL(CodeOffrePrincipale__c, &#39;UI2CDD&#39;),&#39;UGC Illimité 2&#39;,IF(ISPICKVAL(CodeOffrePrincipale__c, &#39;UI2CDI&#39;),&#39;UGC Illimité 2&#39;,IF(ISPICKVAL(CodeOffrePrincipale__c, &#39;UI3CDD&#39;), &#39;UGC Illimité -26 ans&#39;,IF(ISPICKVAL(CodeOffrePrincipale__c, &#39;UI3CDI&#39;),&#39;UGC Illimité -26 ans&#39;,IF(ISPICKVAL(CodeOffrePrincipale__c, &#39;UUCDI&#39;),&#39;UGC Unlimited&#39;,IF(ISPICKVAL(CodeOffrePrincipale__c, &#39;UUCDD&#39;), &#39;UGC Unlimited&#39;,&#39;null&#39;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_formule</label>
    <type>Text</type>
</CustomField>