force-app/main/default/objects/ZDocData__c/fields/tech_fullmonth__c.field-meta.xml
<CustomField>
    <fullName>tech_fullmonth__c</fullName>
    <formula>IF(Offre__c = &#39;UI1&#39;, &#39;21,90€&#39;, IF(Offre__c = &quot;UI2&quot;, &#39;36,80€&#39;, IF(Offre__c = &#39;UI3&#39;, &#39;17,90€&#39;, IF(Offre__c = &#39;UU&#39;, &#39;UGC Unlimited&#39;, &#39;18,90€&#39;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_fullmonth</label>
    <type>Text</type>
</CustomField>