force-app/main/default/objects/ZDocData__c/fields/tech_nomtitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_nomtitulaireducompte__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39;, Account__r.LastName , IF(Payeur__c &lt;&gt; &#39;&#39;,Payeur__r.LastName , &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_nomtitulaireducompte</label>
    <type>Text</type>
</CustomField>