force-app/main/default/objects/ZDocData__c/fields/tech_nomvoietitulairecompte__c.field-meta.xml
<CustomField>
    <fullName>tech_nomvoietitulairecompte__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39;,Account__r.NomVoie__c,IF(Payeur__c &lt;&gt; &#39;&#39;,Payeur__r.NomVoie__c, &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_nomvoietitulairecompte</label>
    <type>Text</type>
</CustomField>