force-app/main/default/objects/ZDocData__c/fields/tech_novoietitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_novoietitulaireducompte__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39;,Account__r.NoVoie__c, IF(Payeur__c &lt;&gt; &#39;&#39;,Payeur__r.NoVoie__c, &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_novoietitulaireducompte</label>
    <type>Text</type>
</CustomField>