force-app/main/default/objects/ZDocData__c/fields/tech_paystitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_paystitulaireducompte__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39;, TEXT(Account__r.Pays__c), IF(Payeur__c &lt;&gt; &#39;&#39;, TEXT(Payeur__r.Pays__c), &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_paystitulaireducompte</label>
    <type>Text</type>
</CustomField>