force-app/main/default/objects/ZDocData__c/fields/tech_prenomtitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_prenomtitulaireducompte__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39;, Account__r.FirstName , IF(Payeur__c &lt;&gt; &#39;&#39;, Payeur__r.FirstName , &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_prenomtitulaireducompte</label>
    <type>Text</type>
</CustomField>