force-app/main/default/objects/ZDocData__c/fields/tech_typevoietitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_typevoietitulaireducompte__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39;, TEXT(Account__r.TypeVoie__c),IF(Payeur__c &lt;&gt;&#39;&#39;, TEXT(Payeur__r.TypeVoie__c),&#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_typevoietitulaireducompte</label>
    <type>Text</type>
</CustomField>