force-app/main/default/objects/ZDocData__c/fields/tech_villetitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_villetitulaireducompte__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39;, Account__r.Ville__r.Name , IF(Payeur__c &lt;&gt; &#39;&#39;,Payeur__r.Ville__r.Name , &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_villetitulaireducompte</label>
    <type>Text</type>
</CustomField>