force-app/main/default/objects/ZDocData__c/fields/tech_zipcodetitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_zipcodetitulaireducompte__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39;, Account__r.CodePostal__c , IF(Payeur__c &lt;&gt; &#39;&#39;,Payeur__r.CodePostal__c , &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_zipcodetitulaireducompte</label>
    <type>Text</type>
</CustomField>