force-app/main/default/objects/ZDocData__c/fields/TypeContrat__c.field-meta.xml
<CustomField>
    <fullName>TypeContrat__c</fullName>
    <label>Type Contrat</label>
    <length>15</length>
    <type>Text</type>
</CustomField>